fixes in CBC plugins

--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/CrystalClear/body.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/CrystalClear/body.html
@@ -11,7 +11,7 @@
 <div id="punwrap">
 <div id="punindex" class="pun">
 <h2><b>{% trans "Quick Links" %}</b>:
-<a href="/" style="text-decoration:underline;">{% trans "Main Page" %}</a> | <a href="/" style="text-decoration:underline;">{% trans "Forum" %}</a>
+<a href="/" style="text-decoration:underline;">{% trans "Main Page" %}</a> | <a href="/forum/" style="text-decoration:underline;">{% trans "Forum" %}</a>
 </h2>
 <br /><br />
 
