--- a/trunk/diamandas/wiki/templates/wiki/task_list.html
+++ b/trunk/diamandas/wiki/templates/wiki/task_list.html
@@ -5,11 +5,11 @@
 <div class="pagetitle"><h3 class="header">{% trans "Site Tasks" %}</h3></div><br />
 <table width="100%" class="historytable" cellspacing="0" cellpadding="0">
 	<thead><tr>
-		<th class="title"><center><B>{% trans "Task Title" %}</B></center></th>
-		<th class="title" width="150"><center><B>{% trans "Task Status" %}</B></center></th>
-		<th class="title" width="100"><center><B>{% trans "Task Priority" %}</B></center></th>
-		<th width="100" class="title"><center><B>{% trans "Last Update" %}</B></center></th>
-		<th width="100" class="title"><center><B>{% trans "Progress" %}</B></center></th>
+		<th class="title"><div style="text-align:center;"><b>{% trans "Task Title" %}</b></div></th>
+		<th class="title" width="150"><div style="text-align:center;"><b>{% trans "Task Status" %}</b></div></th>
+		<th class="title" width="100"><div style="text-align:center;"><b>{% trans "Task Priority" %}</b></div></th>
+		<th width="100" class="title"><div style="text-align:center;"><b>{% trans "Last Update" %}</b></div></th>
+		<th width="100" class="title"><div style="text-align:center;"><b>{% trans "Progress" %}</b></div></th>
 	</tr></thead>
 
 
@@ -48,10 +48,10 @@
 	<br />
 	<table width="100%" class="historytable" cellspacing="0" cellpadding="0">
 	<thead><tr>
-		<th class="title"><center><B>{% trans "Page Title" %}</B></center></th>
-		<th class="title" width="100"><center><B>{% trans "Modified by" %}</B></center></th>
-		<th width="100" class="title"><center><B>{% trans "Date" %}</B></center></th>
-		<th width="200" class="title"><center><B>{% trans "Changes Summary" %}</B></center></th>
+		<th class="title"><div style="text-align:center;"><b>{% trans "Page Title" %}</b></div></th>
+		<th class="title" width="100"><div style="text-align:center;"><b>{% trans "Modified by" %}</b></div></th>
+		<th width="100" class="title"><div style="text-align:center;"><b>{% trans "Date" %}</b></div></th>
+		<th width="200" class="title"><div style="text-align:center;"><b>{% trans "Changes Summary" %}</b></div></th>
 	</tr></thead>
 	{% for page in proposals %}
 	<tr>
