--- a/trunk/diamandas/wiki/templates/wiki/users.html
+++ b/trunk/diamandas/wiki/templates/wiki/users.html
@@ -1,57 +1,52 @@
 {% load i18n %}
 {% extends "body.html" %}
 
-{% block header %}
-<div class="pagetitle"><h1 class="header">{% trans "User Page" %}</h1></div>
+{% block upmenu %}
+<a href="/">{% trans "Main Page" %}</a>
+{% if loginform %}
+<a href="/wiki/register/">{% trans "Register" %}</a>
+{% endif %}
 {% endblock %}
 
-{% block upmenu %}<input type="button" value="{% trans "Main Page" %}" onclick="location.assign('/');"><input type="button" value="{% trans "Register" %}" onclick="location.assign('/wiki/register/');"><input type="button" value="{% trans "Add a Page" %}" onclick="location.assign('/wiki/add/');"><input type="button" value="{% trans "Sitemap" %}" onclick="location.assign('/wiki/sitelist/');">{% endblock %}
-{% block downmenu %}<input type="button" value="{% trans "Main Page" %}" onclick="location.assign('/');"><input type="button" value="{% trans "Register" %}" onclick="location.assign('/wiki/register/');"><input type="button" value="{% trans "Add a Page" %}" onclick="location.assign('/wiki/add/');"><input type="button" value="{% trans "Sitemap" %}" onclick="location.assign('/wiki/sitelist/');">{% endblock %}
+{% block header %}
+{% trans "User Page" %}
+{% endblock %}
 
 {% block content %}
 {% if loginform %}
 	{% if error %}
-		<center><b>{% trans "Login Error - bad login and/or password" %}</b></center>
+		<div style="text-align:center;"><b>{% trans "Login Error - bad login and/or password" %}</b></div>
 	{% endif %}
-	<form action="." method="POST"><input type="hidden" value="{{ hash }}" name="imghash">
-	<center><table class="historytable" cellspacing="0" cellpadding="0">
+	<div style="text-align:center;"><form action="." method="post"><input type="hidden" value="{{ hash }}" name="imghash" />
+	<table class="historytable" cellspacing="0" cellpadding="0" align="center">
 	<thead><tr>
-		<th class="title" width="40%"><center><b>{% trans "LOGIN FORM" %}</b></center></th>
+		<th class="title" width="40%"><div style="text-align:center;"><b>{% trans "LOGIN FORM" %}</b></div></th>
 		<th class="title"> </th>
 	</tr></thead>
 	<tr>
 		<td class="title"><b>{% trans "Login" %}</b></td>
-		<td><center><input type="text" size="20" name="login"></center></td>
+		<td><div style="text-align:center;"><input type="text" size="20" name="login" /></div></td>
 	</tr>
 	<tr>
 		<td class="title"><b>{% trans "Password" %}</b></td>
-		<td><center><input type="password" size="20" name="password"></center></td>
+		<td><div style="text-align:center;"><input type="password" size="20" name="password" /></div></td>
 	</tr>
 	<tr>
-		<td class="title"><b>{% trans "Text from the image" %}</b><br>{% trans "(Use CAPITAL letters)" %}</td>
-		<td><center><input type="text" size="20" name="imgtext"><br><img src="/site_media/bg2.jpg"></center></td>
+		<td class="title"><b>{% trans "Text from the image" %}</b><br />{% trans "(Use CAPITAL letters)" %}</td>
+		<td><div style="text-align:center;"><input type="text" size="20" name="imgtext" /><br /><img src="/site_media/bg2.jpg" alt="" /></div></td>
 	</tr>
 	</table>
-	<br><input type="submit" value="{% trans "Login" %}" class="actiontable">
-	</form></center>
+	<br /><input type="submit" value="{% trans "Login" %}" class="actiontable" />
+	</form></div>
 {% else %}
-	<b>{% trans "Welcome" %} {{ user }}</b><br>
-	{% if add %}
-		{% trans "- You can add new Pages" %}<br>
-	{% else %}
-		{% trans "- You can't add new Pages" %}<br>
-	{% endif %}
-	{% if edit %}
-		{% trans "- You can edit Pages" %}<br>
-	{% else %}
-		{% trans "- You can't edit Pages" %}<br>
-	{% endif %}
-	{% if current %}
-		{% trans "- Your edits will be displayed without delay" %}<br>
-	{% else %}
-		{% trans "- Your edits will be marked as Edit Proposals and won't appear on the wiki until the site staff won't review your changes." %}<br>
-	{% endif %}
-	<br>
-	<center><input type="button" value="{% trans "Log Out" %}" onclick="location.assign('/wiki/user/?log=out');"></center>
+	<b>{% trans "Welcome" %} {{ user }}</b><br />
+	<br />
+	<div style="text-align:center;"><input type="button" value="{% trans "Log Out" %}" onclick="location.assign('/wiki/user/?log=out');" /></div>
 {% endif %}
 {% endblock %}
+
+
+
+
+
+
