--- a/trunk/diamandas/wiki/templates/wiki/add.html
+++ b/trunk/diamandas/wiki/templates/wiki/add.html
@@ -1,24 +1,22 @@
 {% load i18n %}
 {% load cbc %}
 {% extends "body.html" %}
-{% block upmenu %}<input type="button" value="{% trans "Main Page" %}" onclick="location.assign('/');">{% endblock %}
-{% block downmenu %}<input type="button" value="{% trans "Main Page" %}" onclick="location.assign('/');">{% endblock %}
 {% block content %}
 
-<div class="actiontitle">{% trans "Add a Page" %}</div><br>
+<div class="actiontitle">{% trans "Add a Page" %}</div><br />
 
 <form method="post" action="."><table width="100%" cellspacing="0" cellpadding="0" class="actiontable">
 <tr><td width="140"><p>
     {% trans "Title" %}:</td><td> {{ form.title }}
-    {% if form.title.errors %}<br>*** {{ form.title.errors|join:", " }}{% endif %}
+    {% if form.title.errors %}<br />*** {{ form.title.errors|join:", " }}{% endif %}
 </p></td></tr>
 <tr><td width="140"><p>
     {% trans "Slug" %}:</td><td> {{ form.slug }}
-    {% if form.slug.errors %}<br>*** {{ form.slug.errors|join:", " }}{% endif %}
+    {% if form.slug.errors %}<br />*** {{ form.slug.errors|join:", " }}{% endif %}
 </p></td></tr>
 <tr><td width="140"><p>
     {% trans "Description" %}:</td><td> {{ form.description }}
-    {% if form.description.errors %}<br>*** {{ form.description.errors|join:", " }}{% endif %}
+    {% if form.description.errors %}<br />*** {{ form.description.errors|join:", " }}{% endif %}
 </p></td></tr>
 <tr><td><p>
     <label for="id_address">{% trans "Content" %}:</td><td>
@@ -29,7 +27,7 @@
 	<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"<img src=\"URL\" alt=\"\" />"'><img src="/site_media/wiki/editor/image.png" title="{% trans "Underline" %}" alt="{% trans "Underline" %}" border="0"></a>
 	<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"<blockquote></blockquote>"'><img src="/site_media/wiki/editor/block.png" title="{% trans "Blockquote" %}" alt="{% trans "Blockquote" %}" border="0"></a>
 	
-	<br>
+	<br />
 	<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':omg:' "><img src="/site_media/wiki/smilies/icon_eek.gif" border="0" /></a> 
 	<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':nice:' "><img src="/site_media/wiki/smilies/icon_biggrin.gif" border="0" /></a> 
 	<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':whatthe:' "><img src="/site_media/wiki/smilies/icon_neutral.gif" border="0" /></a> 
@@ -40,21 +38,21 @@
 	<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':arrow:' "><img src="/site_media/wiki/smilies/icon_arrow.gif" border="0" /></a> 
 	<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':grin:' "><img src="/site_media/wiki/smilies/icon_cheesygrin.gif" border="0" /></a> 
 	<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':cool:' "><img src="/site_media/wiki/smilies/icon_cool.gif" border="0" /></a> 
-	
+	<br />
      {{ form.text }}
-    {% if form.text.errors %}<br>*** {{ form.text.errors|join:", " }}{% endif %}
+    {% if form.text.errors %}<br />*** {{ form.text.errors|join:", " }}{% endif %}
 </p>
 </td></tr>
 <tr><td><p>
     {% trans "Changes summary" %}:</td><td> {{ form.changes }}
-    {% if form.changes.errors %}<br>*** {{ form.changes.errors|join:", " }}{% endif %}
+    {% if form.changes.errors %}<br />*** {{ form.changes.errors|join:", " }}{% endif %}
 </p></td></tr>
 </table>
-<center><input type="submit" value="{% trans "Save Page" %}" style="actiontable" /><br /><br />
-<input type="submit" value="{% trans "Preview" %}" name="preview" class="actiontable" /></center>
+<div style="text-align:center;"><input type="submit" value="{% trans "Save Page" %}" style="actiontable" /><br /><br />
+<input type="submit" value="{% trans "Preview" %}" name="preview" class="actiontable" /></div>
 </form><script lang="javascript" type="text/javascript">document.getElementById('id_text').rows=20;</script>
-<br><br>
-<B>{% trans "Allowed HTML Tags" %}</B>:b, a, i, br, p, u, pre, div, span, h1, h2, h3, h4, img, li, ul, ol, acronym, abbr, center, cite, map, strong, sub, sup, table, tr, td, tbody, thead, th, tfoot, label<br><br>
+<br /><br />
+<b>{% trans "Allowed HTML Tags" %}</b>:b, a, i, br, p, u, pre, div, span, h1, h2, h3, h4, img, li, ul, ol, acronym, abbr, center, cite, map, strong, sub, sup, table, tr, td, tbody, thead, th, tfoot, label<br /><br />
 
 <br />
 {% if preview %}
@@ -69,7 +67,7 @@
 {% for i in cbcdesc %}
 <div class="tagdesc"><b>{{ i.tag }}</b></div>
 <b><pre>{{ i.tag_example }}</pre></b>
-{{ i.description }}<br><br>
+{{ i.description }}<br /><br />
 {% endfor %}
 
 {% endblock %}
