--- a/trunk/diamandas/wiki/templates/wiki/com_task_add.html
+++ b/trunk/diamandas/wiki/templates/wiki/com_task_add.html
@@ -1,14 +1,21 @@
 {% load i18n %}
 {% extends "body.html" %}
-{% block upmenu %}<input type="button" value="{% trans "Main Page" %}" onclick="location.assign('/');"><input type="button" value="{% trans "Task List" %}" onclick="location.assign('/wiki/task_list/1/');">{% endblock %}
-{% block downmenu %}<input type="button" value="{% trans "Main Page" %}" onclick="location.assign('/');"><input type="button" value="{% trans "Task List" %}" onclick="location.assign('/wiki/task_list/1/');">{% endblock %}
+{% block upmenu %}
+<a href="/wiki/task_list/1/">{% trans "Task List" %}</a>
+<a href="/">{% trans "Main Page" %}</a>
+<a href="/forum/">{% trans "Forum" %}</a>
+<a href="/wiki/search/">{% trans "Search" %}</a>
+<a href="/wiki/user/">{% trans "My Account" %}</a>
+{% endblock %}
+
+
 {% block content %}
 
-<div class="actiontitle">{% trans "Add a Task Comment" %}</div><br>
+<div class="actiontitle">{% trans "Add a Task Comment" %}</div><br />
 
 <form method="post" action=".">
 <textarea name="text" rows="10" cols="70"></textarea>
 <center><input type="submit" value="{% trans "Add Comment" %}" style="actiontable" /></center>
 </form>
-<B>{% trans "Allowed HTML Tags" %}</B>: b, a, i, br, p, u, pre, div, span, img, li, ul, ol, center, sub, sup, blockquote
+<b>{% trans "Allowed HTML Tags" %}</b>: b, a, i, br, p, u, pre, div, span, img, li, ul, ol, center, sub, sup, blockquote
 {% endblock %}
