--- a/trunk/diamandas/wiki/templates/wiki/edit.html
+++ b/trunk/diamandas/wiki/templates/wiki/edit.html
@@ -1,24 +1,26 @@
 {% load i18n %}
 {% load cbc %}
 {% extends "body.html" %}
-{% block upmenu %}<input type="button" value="{% trans "Back to Page" %}" onclick="location.assign('/wiki/page/{{ page.slug }}/');"> <input type="button" value="{% trans "Page History" %}" onclick="location.assign('/wiki/history/{{ page.slug }}/');"> 
-<input type="button" value="{% trans "Add a Page" %}" onclick="location.assign('/wiki/add/');"> <input type="button" value="{% trans "Main Page" %}" onclick="location.assign('/');">{% endblock %}
-{% block downmenu %}<input type="button" value="{% trans "Back to Page" %}" onclick="location.assign('/wiki/page/{{ page.slug }}/');"> <input type="button" value="{% trans "Page History" %}" onclick="location.assign('/wiki/history/{{ page.slug }}/');"> 
-<input type="button" value="{% trans "Add a Page" %}" onclick="location.assign('/wiki/add/');"> <input type="button" value="{% trans "Main Page" %}" onclick="location.assign('/');">{% endblock %}
+{% block upmenu %}
+<a href="/wiki/page/{{ page.slug }}/">{% trans "Back to Page" %}</a>
+<a href="/">{% trans "Main Page" %}</a>
+<a href="/forum/">{% trans "Forum" %}</a>
+<a href="/wiki/search/">{% trans "Search" %}</a>
+<a href="/wiki/user/">{% trans "My Account" %}</a>{% endblock %}
 
 
 {% block content %}
 
-<div class="actiontitle">{% trans "Edit Page" %}</div><br>
+<div class="actiontitle">{% trans "Edit Page" %}</div><br />
 <form method="post" action="."><table width="100%" border="0" cellspacing="2" cellpadding="2" class="actiontable">
 <tr><td width="140"><p>
     {% trans "Title" %}:</td><td> {{ form.title }}
-    {% if form.title.errors %}<br>*** {{ form.title.errors|join:", " }}{% endif %}
+    {% if form.title.errors %}<br />*** {{ form.title.errors|join:", " }}{% endif %}
 </p></td></tr>
 
 <tr><td width="140"><p>
     {% trans "Description" %}:</td><td> {{ form.description }}
-    {% if form.description.errors %}<br>*** {{ form.description.errors|join:", " }}{% endif %}
+    {% if form.description.errors %}<br />*** {{ form.description.errors|join:", " }}{% endif %}
 </p></td></tr>
 
 <tr><td><p>
@@ -30,7 +32,7 @@
 	<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"<img src=\"URL\" alt=\"\" />"'><img src="/site_media/wiki/editor/image.png" title="{% trans "Underline" %}" alt="{% trans "Underline" %}" border="0"></a>
 	<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"<blockquote></blockquote>"'><img src="/site_media/wiki/editor/block.png" title="{% trans "Blockquote" %}" alt="{% trans "Blockquote" %}" border="0"></a>
 	 
-	<br>
+	<br />
 	<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':omg:' "><img src="/site_media/wiki/smilies/icon_eek.gif" border="0" /></a> 
 	<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':nice:' "><img src="/site_media/wiki/smilies/icon_biggrin.gif" border="0" /></a> 
 	<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':whatthe:' "><img src="/site_media/wiki/smilies/icon_neutral.gif" border="0" /></a> 
@@ -40,19 +42,19 @@
 	<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':idea:' "><img src="/site_media/wiki/smilies/icon_idea.gif" border="0" /></a> 
 	<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':arrow:' "><img src="/site_media/wiki/smilies/icon_arrow.gif" border="0" /></a> 
 	<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':grin:' "><img src="/site_media/wiki/smilies/icon_cheesygrin.gif" border="0" /></a> 
-	<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':cool:' "><img src="/site_media/wiki/smilies/icon_cool.gif" border="0" /></a> 
+	<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':cool:' "><img src="/site_media/wiki/smilies/icon_cool.gif" border="0" /></a><br />
     {{ form.text }}
-    {% if form.text.errors %}<br>*** {{ form.text.errors|join:", " }}{% endif %}
+    {% if form.text.errors %}<br />*** {{ form.text.errors|join:", " }}{% endif %}
 </p></td></tr>
 <tr><td><p>
     {% trans "Summary of changes" %}:</td><td> {{ form.changes }}
-    {% if form.changes.errors %}<br>*** {{ form.changes.errors|join:", " }}{% endif %}
+    {% if form.changes.errors %}<br />*** {{ form.changes.errors|join:", " }}{% endif %}
 </p></td></tr>
 </table>
 <center><input type="submit" value="{% trans "Save Changes" %}" class="actiontable" /><br /><br />
 <input type="submit" value="{% trans "Preview" %}" name="preview" class="actiontable" /></center>
 </form><script>document.getElementById('id_text').rows='20';</script>
-<br><br><B>{% trans "Allowed HTML Tags" %}</B>:b, a, i, br, p, u, pre, div, span, h1, h2, h3, h4, img, li, ul, ol, acronym, abbr, center, cite, map, strong, sub, sup, table, tr, td, tbody, thead, th, tfoot, label<br><br>
+<br /><br /><B>{% trans "Allowed HTML Tags" %}</B>:b, a, i, br, p, u, pre, div, span, h1, h2, h3, h4, img, li, ul, ol, acronym, abbr, center, cite, map, strong, sub, sup, table, tr, td, tbody, thead, th, tfoot, label<br /><br />
 
 <br />
 {% if preview %}
@@ -67,7 +69,7 @@
 {% for i in cbcdesc %}
 <div class="tagdesc"><b>{{ i.tag }}</b></div>
 <b><pre>{{ i.tag_example }}</pre></b>
-{{ i.description }}<br><br>
+{{ i.description }}<br /><br />
 {% endfor %}
 
 {% endblock %}
