--- a/trunk/diamandas/wiki/templates/wiki/page.html
+++ b/trunk/diamandas/wiki/templates/wiki/page.html
@@ -2,26 +2,17 @@
 {% load cbc %}
 
 {% extends "body.html" %}
-{% block upmenu %}<input type="button" value="{% trans "Edit" %}" onclick="location.assign('/wiki/edit/{{ page.slug }}/');"> <input type="button" value="{% trans "Page History" %}" onclick="location.assign('/wiki/history/{{ page.slug }}/');"> 
-<input type="button" value="{% trans "Add a Page" %}" onclick="location.assign('/wiki/add/');"> <input type="button" value="{% trans "Main Page" %}" onclick="location.assign('/');"><input type="button" value="{% trans "Sitemap" %}" onclick="location.assign('/wiki/sitelist/');"><input type="button" value="{% trans "Search" %}" onclick="location.assign('/wiki/search/');">{% endblock %}
-{% block downmenu %}
-{% if pdf %}
-[<a href="/wiki/pdf/{{ page.slug }}/"><b>{% trans "Save as PDF" %}</b></a>] | 
-{% endif %}
-[<a onclick="window.print()"><b>{% trans "Print Page" %}</b></a>]<br><input type="button" value="{% trans "Edit" %}" onclick="location.assign('/wiki/edit/{{ page.slug }}/');"> <input type="button" value="{% trans "Page History" %}" onclick="location.assign('/wiki/history/{{ page.slug }}/');"> 
-<input type="button" value="{% trans "Add a Page" %}" onclick="location.assign('/wiki/add/');"> <input type="button" value="{% trans "Main Page" %}" onclick="location.assign('/');"><input type="button" value="{% trans "Sitemap" %}" onclick="location.assign('/wiki/sitelist/');"><input type="button" value="{% trans "Search" %}" onclick="location.assign('/wiki/search/');">{% endblock %}
-
 {% block header %}
-<div class="pagetitle"><h1 class="header">{{ page.title }}</h1></div>
+{{ page.title }}
 {% if page.description %}
-<h2 class="header">{{ page.description }}</h2>
+ - {{ page.description }}
 {% endif %}
 {% endblock %}
 
 {% block content %}
 {{ page.text|cbc }}
-<hr>
-<center><b>{% trans "Page Added" %}:</b> {{ page.creation_date }} | <b>{% trans "Page Last Modification" %}</b>: {{ page.creation_date }} | <b>{% trans "Changes" %}</b>: {{ page.changes }}</center>
+<hr />
+<div style="text-align:center;"><b>{% trans "Page Added" %}:</b> {{ page.creation_date }} | <b>{% trans "Page Last Modification" %}</b>: {{ page.creation_date }} | <b>{% trans "Changes" %}</b>: {{ page.changes }}</div>
 {% endblock %}
 
 {% block title %}{{ page.title }}{% endblock %}
