--- a/trunk/diamandas/wiki/templates/wiki/register.html
+++ b/trunk/diamandas/wiki/templates/wiki/register.html
@@ -2,45 +2,42 @@
 {% extends "body.html" %}
 
 {% block header %}
-<div class="pagetitle"><h1 class="header">{% trans "User Page" %}</h1></div>
+{% trans "User Page" %}
 {% endblock %}
-
-{% block upmenu %}<input type="button" value="{% trans "Main Page" %}" onclick="location.assign('/');"><input type="button" value="{% trans "Add a Page" %}" onclick="location.assign('/wiki/add/');"><input type="button" value="{% trans "Sitemap" %}" onclick="location.assign('/wiki/sitelist/');">{% endblock %}
-{% block downmenu %}<input type="button" value="{% trans "Main Page" %}" onclick="location.assign('/');"><input type="button" value="{% trans "Add a Page" %}" onclick="location.assign('/wiki/add/');"><input type="button" value="{% trans "Sitemap" %}" onclick="location.assign('/wiki/sitelist/');">{% endblock %}
 
 {% block content %}
 {% if error %}
-	<center><b>{% trans "Registration Error" %}</b></center>
+	<div style="text-align:center;"><b>{% trans "Registration Error" %}</b></div>
 {% endif %}
 
-<form action="/wiki/register/" method="POST"><input type="hidden" value="{{ hash }}" name="imghash">
-<center><table class="historytable" cellspacing="0" cellpadding="0">
+<form action="/wiki/register/" method="POST"><input type="hidden" value="{{ hash }}" name="imghash" />
+<div style="text-align:center;"><table class="historytable" cellspacing="0" cellpadding="0">
 	<thead><tr>
-		<th class="title" width="50%"><center><b>{% trans "REGISTER FORM" %}</b></center></th>
+		<th class="title" width="50%"><div style="text-align:center;"><b>{% trans "REGISTER FORM" %}</b></div></th>
 		<th class="title"> </th>
 	</tr></thead>
 	<tr>
-		<td class="title"><b>{% trans "Login" %}</b><br>{% trans "required, more than 3 chars<br>letters or numbers" %}</td>
-		<td><center><input type="text" size="20" name="login"></center></td>
+		<td class="title"><b>{% trans "Login" %}</b><br />{% trans "required, more than 3 chars<br />letters or numbers" %}</td>
+		<td><div style="text-align:center;"><input type="text" size="20" name="login" /></div></td>
 	</tr>
 	<tr>
-		<td class="title"><b>{% trans "Password" %}</b><br>{% trans "required, more than 4 chars<br>letters or numbers" %}</td>
-		<td><center><input type="password" size="20" name="password1"></center></td>
+		<td class="title"><b>{% trans "Password" %}</b><br />{% trans "required, more than 4 chars<br />letters or numbers" %}</td>
+		<td><div style="text-align:center;"><input type="password" size="20" name="password1" /></div></td>
 	</tr>
 	<tr>
-		<td class="title"><b>{% trans "Password Again" %}</b><br>{% trans "required, enter the same password" %}</td>
-		<td><center><input type="password" size="20" name="password2"></center></td>
+		<td class="title"><b>{% trans "Password Again" %}</b><br />{% trans "required, enter the same password" %}</td>
+		<td><div style="text-align:center;"><input type="password" size="20" name="password2" /></div></td>
 	</tr>
 	<tr>
-		<td class="title"><b>{% trans "Email" %}</b><br>{% trans "required, your email addres" %}</td>
-		<td><center><input type="text" size="20" name="email"></center></td>
+		<td class="title"><b>{% trans "Email" %}</b><br />{% trans "required, your email addres" %}</td>
+		<td><div style="text-align:center;"><input type="text" size="20" name="email" /></div></td>
 	</tr>
 	<tr>
-		<td class="title"><b>{% trans "Text from the image" %}</b><br>{% trans "(Use CAPITAL letters)" %}</td>
-		<td><center><input type="text" size="20" name="imgtext"><br><img src="/site_media/bg2.jpg"></center></td>
+		<td class="title"><b>{% trans "Text from the image" %}</b><br />{% trans "(Use CAPITAL letters)" %}</td>
+		<td><div style="text-align:center;"><input type="text" size="20" name="imgtext" /><br /><img src="/site_media/bg2.jpg" alt=""></div></td>
 	</tr></table>
 
-<br><input type="submit" value="{% trans "Register My" %}" class="actiontable"></center>
+<br /><input type="submit" value="{% trans "Register My" %}" class="actiontable"></div>
 
 </form>
 {% endblock %}
