--- a/trunk/diamandas/wiki/templates/wiki/oldPage.html
+++ b/trunk/diamandas/wiki/templates/wiki/oldPage.html
@@ -1,12 +1,15 @@
 {% load i18n %}
 {% load cbc %}
 {% extends "body.html" %}
-{% block upmenu %}
-<a href="/wiki/page/{{ page.slug }}/">{% trans "Back to Page" %}</a>
-<a href="/">{% trans "Main Page" %}</a>
-<a href="/forum/">{% trans "Forum" %}</a>
-<a href="/wiki/search/">{% trans "Search" %}</a>
-<a href="/wiki/user/">{% trans "My Account" %}</a>{% endblock %}
+{% block leftmenu %}
+<li><a href="/wiki/edit/{{ page.slug }}/">{% trans "Edit" %}</a></li>
+<li><a href="/wiki/history/{{ page.slug }}/">{% trans "Page History" %}</a></li>
+<li><a href="/wiki/add/">{% trans "Add a Page" %}</a></li>
+{% if pdf %}
+<li><a href="/wiki/pdf/{{ page.slug }}/">{% trans "Save as PDF" %}</a></li>
+{% endif %}
+<li><a onclick="window.print();">{% trans "Print Page" %}</a></li>
+{% endblock %}
 
 {% block content %}
 {{ page.title }} - {{ page.description }}
