--- a/trunk/diamandas/wiki/templates/wiki/task_show.html
+++ b/trunk/diamandas/wiki/templates/wiki/task_show.html
@@ -10,10 +10,13 @@
 <br />
 <br />
 {% ifnotequal task.task_progress "0" %}
-<div class="box" style="width:{{ task.task_progress }}%;"><b>Progress</b>: {{ task.task_progress }}%</div>
+<div class="box" style="width:{{ task.task_progress }}%;"><b>{% trans "Progress" %}</b>: {{ task.task_progress }}%</div>
 {% endifnotequal %}
-<div style="text-align:center;"><b>Task Type</b>: {{ task.task_type }} | <b>Task Status</b>: {{ task.task_status }} | <b>Assigned To</b>: {{ user_list }}<br />
-<b>Creation Date</b>: {{ task.task_creation_date }} | <b>Last Modification Date</b>: {{ task.task_modification_date }}</div>
+<div style="text-align:center;"><b>{% trans "Task Type" %}</b>: {{ task.task_type }} | <b>{% trans "Task Status" %}</b>: {{ task.task_status }} | <b>{% trans "Assigned To" %}</b>: {{ user_list }}<br />
+<b>{% trans "Creation Date" %}</b>: {{ task.task_creation_date }} | <b>{% trans "Last Modification Date" %}</b>: {{ task.task_modification_date }}<br /><br />
+
+<input type="button" value="{% trans "Add Comment" %}" onclick="location.assign('/wiki/task_com_add/{{ task.id }}/');" />
+</div>
 <br />
 {% if com %}
 <div class="pagetitle"><h3 class="header">{% trans "Task Comments" %}</h3></div><br />
@@ -33,10 +36,3 @@
 </table>
 {% endif %}
 {% endblock %}
-
-{% block upmenu %}
-<a href="/wiki/task_list/1/">{% trans "Task List" %}</a>
-<a href="/">{% trans "Main Page" %}</a>
-<a href="/forum/">{% trans "Forum" %}</a>
-<a href="/wiki/search/">{% trans "Search" %}</a>
-<a href="/wiki/user/">{% trans "My Account" %}</a>{% endblock %}
