--- a/trunk/media/wiki/images/style.css
+++ b/trunk/media/wiki/images/style.css
@@ -1,3 +1,5 @@
+/* Sonia Template */
+
 body {
 	margin: 0 auto;
 	padding: 0;
@@ -87,17 +89,40 @@ a img {
 }
 
 #navigacija {
-	position: fixed;
-	bottom:0px;
-	margin: 0px;
-	padding-top: 8px;
-	font: 10pt, "dejaVu Sans", Verdana, Tahoma, Arial, Sans-Serif;
-	font-weight:bold;
-	text-align:center;
-	border-top: 1px dashed black;
-	background: #E5EFF9 url(plavo.gif);
-	width:100%;
-	height:20px;
+	clear: left;
+	float: left;
+	width: 150px;
+	margin: 0 0 10px 0;
+	padding: 0;
+	font-size: 0.9em;
+}
+
+#navigacija ul {	
+	list-style: none;
+	width: 150px;
+	margin: 0 0 3px 0;
+	padding: 0;
+	font-size: 1.1em;
+}	
+
+#navigacija li {
+	margin-bottom: 4px;
+}
+
+#navigacija li a, #navigacija li a:visited {
+	text-align: right;
+	height: 20px;
+	text-decoration: none;
+	color: #fff;
+	display: block;
+	padding: 6px 8px 0 10px;
+	background: #2489DB;
+	font-size:12px;
+}	
+	
+#navigacija li a:hover {
+	background: #A9CAEB;
+	color: #286ea0;
 }
 
 .lijevo {
@@ -150,7 +175,7 @@ a img {
 }
 
 #clanci {
-	margin:  5px;
+	margin:  0 0 5px 155px;
 	padding: 0 10px 5px 6px;
 	line-height: 1.4em;
 	text-align:justify;
@@ -191,7 +216,30 @@ a img {
 	padding: 0;
 	margin: 0;
 }
-
+.actiontable
+	{
+	border-collapse:collapse;
+	font-weight:bold;
+	}
+.actiontable td
+	{
+	padding:10px;
+	margin:0px;
+	border: 1px solid #434659;
+	border-collapse:collapse;
+	text-align:left;
+	}
+.actiontable textarea, input, select
+	{
+	font-family: verdana, tahoma "Dejavu Sans";
+	margin:5px;
+	}
+.actiontitle
+	{
+	text-align:center;
+	font-weight:bold;
+	font-size:20px;
+	}
 .box
 	{
 	border:#C5CEFF dashed 1px;
@@ -255,8 +303,42 @@ h4
 {
 font-size: 115%;
 }
-
 textarea
 {
 width:100%;
 }
+.diff
+	{
+	width:100%;
+	border-collapse:collapse;
+	border:grey solid 1px;
+	}
+.diffadd
+	{
+	background-color: #B9FFBA;
+	border: green solid 1px;
+	border-collapse:collapse;
+	}
+.diffdel
+	{
+	background-color: #FFC1C1;
+	border: red solid 1px;
+	border-collapse:collapse;
+	}
+.diffchange
+	{
+	background-color: #88f;
+	border: yellow solid 1px;
+	border-collapse:collapse;
+	}
+.diffno
+	{
+	font-size:11px;
+	border-collapse:collapse;
+	}
+.diffinfo
+	{
+	background-color: #D8DCFF;
+	border: #B3B3FF solid 1px;
+	border-collapse:collapse;
+	}
