--- a/trunk/diamandas/wiki/templates/wiki/add.html
+++ b/trunk/diamandas/wiki/templates/wiki/add.html
@@ -3,7 +3,7 @@
 {% extends "body.html" %}
 {% block content %}
 
-<div class="actiontitle">{% trans "Add a Page" %}</div><br />
+<h2 class="pageh">{% trans "Add a Page" %}</h2><br />
 
 <form method="post" action="."><table width="100%" cellspacing="0" cellpadding="0" class="actiontable">
 <tr><td width="140"><p>
@@ -56,14 +56,14 @@
 
 <br />
 {% if preview %}
-<div class="pagetitle"><h1 class="header">Page Preview</h1></div>
+<h1 class="pageh">Page Preview</h1>
 	{{ preview|cbc }}
-<div class="pagetitle"><h1 class="header">End of Preview</h1></div>
+<h1 class="pageh">End of Preview</h1>
 {% endif %}
 
 <br />
 
-<div class="actiontitle">{% trans "ContentBBCode List" %}</div>
+<h2 class="pageh">{% trans "ContentBBCode List" %}</h2>
 {% for i in cbcdesc %}
 <div class="tagdesc"><b>{{ i.tag }}</b></div>
 <b><pre>{{ i.tag_example }}</pre></b>
